[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/RockGrass.gd" type="Script" id=1]
[ext_resource path="res://PNG/rock.png" type="Texture" id=2]
[ext_resource path="res://PNG/rockSnow.png" type="Texture" id=3]
[ext_resource path="res://PNG/rockGrass.png" type="Texture" id=4]
[ext_resource path="res://PNG/rockIce.png" type="Texture" id=5]
[ext_resource path="res://PNG/rockDown.png" type="Texture" id=6]
[ext_resource path="res://PNG/rockSnowDown.png" type="Texture" id=7]
[ext_resource path="res://PNG/rockGrassDown.png" type="Texture" id=8]
[ext_resource path="res://PNG/rockIceDown.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Rock",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Snow",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Grass",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Ice",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Rock",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Snow",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Grass",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "Ice",
"speed": 5.0
} ]

[node name="Rock" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="area" type="Area2D" parent="."]

[node name="poly_down" type="CollisionPolygon2D" parent="area"]
position = Vector2( -10, -36 )
scale = Vector2( 1.125, 1.125 )
polygon = PoolVector2Array( -53.3333, 592, 17.7778, 352, 62.2222, 592 )

[node name="poly_up" type="CollisionPolygon2D" parent="area"]
position = Vector2( 0, 10 )
scale = Vector2( 1.125, 1.125 )
polygon = PoolVector2Array( -62.2222, -97.7778, 53.3333, -97.7778, 8.88889, 142.222 )

[node name="rock_down" type="AnimatedSprite" parent="."]
position = Vector2( 0, 480 )
frames = SubResource( 1 )
animation = "Snow"

[node name="rock_up" type="AnimatedSprite" parent="."]
position = Vector2( 0, 40 )
frames = SubResource( 2 )
animation = "Snow"

[node name="poly_down" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -50, 600, 10, 360, 50, 600 )

[node name="poly_up" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -50, -80, 50, -80, 10, 160 )
[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
